# investing_rules

./: .gitignore  agriculture_tickers.txt  global_energy_tickers.txt  main.py  mining_tickers.txt  pyproject.toml  rule_runner.sh  rules.py  tickers.txt
src/: base_command.py  config.py  importer.py  main.py.old  market_value.py  rule_runner.py  ticker_group.py
templates/: index.html  results.html
