[project]
name = "opportunities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.1",
    "mplfinance>=0.12.10b0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "rich>=14.0.0",
    "ruff>=0.11.7",
    "ta>=0.11.0",
    "uvicorn>=0.34.2",
    "yfinance>=0.2.56",
]


[dependency-groups]
dev = [
    "ruff>=0.7.4",
]

[tool.ruff]
line-length = 120
target-version = 'py312'
