[project]
name = "opportunities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.1",
    "mplfinance>=0.12.10b0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "rich>=14.0.0",
    "ta>=0.11.0",
    "tiingo>=0.16.1",
    "yfinance>=0.2.61",
]


[dependency-groups]
dev = [
    "ruff>=0.7.4",
]

[tool.ruff]
line-length = 120
target-version = 'py312'
